[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "molnextr"
version = "1.1.0"
requires-python = ">=3.10,<3.12"
description = "Fork for MolNexTR"
readme = "README.md"

dependencies = [
    "albumentations==1.1.0",
    "OpenNMT-py==2.2.0",
    "timm>=0.4.12,<=0.5.4",
    "transformers>=4.47.0,<=4.52.4",
    "SmilesPE"
]

[tool.setuptools.package-data]
molnextr = ["vocab/*.json"]
